# yandex_music_rpc

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: package-to-exe-win.yml
handlers/: rpc.py  yandex.py
ui/: main_window.ui
ui/resources/: res.qrc
workflow/: package-to-exe-win.yml
